--- a/droid2600/trunk/droid2600/AndroidManifest.xml
+++ b/droid2600/trunk/droid2600/AndroidManifest.xml
@@ -55,9 +55,9 @@
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="8"/>
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
     <!-- <uses-permission android:name="android.permission.INTERNET"></uses-permission> -->
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
     <!-- <uses-permission android:name="android.permission.VIBRATE"></uses-permission> -->
 </manifest>
